2005-10-15  Roman Joost <roman@bromeco.de>

        * firefox2/global/icons/Warning.png
        * firefox2/global/icons/warning.png: renamed to uppercase
        Warning, which should now be used by the theme

2005-10-15  Roman Joost <roman@bromeco.de>

        * firefox2/global/icons/warning.png: new warning icon
        * firefox2/browser/browser.css: fixed throbber handling, which
        should now also appear in not animated state

        * src/marks-large.xcf: updated (warning added)

2005-10-14  Roman Joost <roman@bromeco.de>

        * firefox2/global/global.css: tried to fix the throbber

        * firefox2/global/icons/warning-large.png: has now a
        silverish look

        * firefox2/global/icons/Question.png
        * firefox2/global/icons/Error.png: updated according to
        marks-large.xcf

        * firefox2/install.rdf: bumped to next version
        
        * src/marks-large.xcf: added missing white stripes at the
        bottom

        * firefox2/browser/throbber16-single.gif
        * firefox2/browser/throbber16-anim.gif
        * firefox2/browser/browser.css: already in global/throbber,
        so not needed anymore here.

2005-10-01  Roman Joost	<roman@bromeco.de>

	* firefox2/browser/Toolbar.png
	* firefox2/mozapps/downloads/downloadCleanupDisabled.png
	* firefox2/browser/Toolbar-small.png
	* firefox2/help/Toolbar.png: deprecated and from the old
	classic theme 

	* firefox2/global/tabDragDrop/tabDragIndicator.png
	* firefox2/global/throbber/Throbber-small.png
	* firefox2/global/throbber/Throbber-small.gif
	* firefox2/global/icons/notfound.png
	* firefox2/global/icons/Print-preview.png
	* firefox2/global/icons/find.png
	* firefox2/install.rdf
	* firefox2/browser/toolbar.png
	* firefox2/browser/bookmarks/bookmarksManager.css
	* firefox2/browser/bookmarks/Bookmarks-toolbar.png
	* firefox2/browser/browser.css
	* firefox2/preview.png
	* firefox2/help/help.css
	* firefox2/mozapps/extensions/actionbuttons.png